--- a/debian/control
+++ b/debian/control
@@ -13,7 +13,7 @@ Build-Depends: libselinux1-dev (>= 2.1.0), libpam0g-dev,
  python-sepolgen (>=1.1.0), libaudit-dev, libcap-ng-dev, libcap-dev,
  libpcre3-dev
 XS-Python-Version: >= 2.5
-XS-Pexip-Upstream: http://archive.ubuntu.com/ubuntu/ precise
+XS-Pexip-Upstream: http://ftp.debian.org/debian/ jessie
 
 Package: policycoreutils
 Architecture: any
