--- a/debian/rules
+++ b/debian/rules
@@ -22,7 +22,7 @@ dpkg_buildflags = DEB_BUILD_MAINT_OPTIONS=$(DEB_BUILD_MAINT_OPTIONS) dpkg-buildf
 export DEB_CFLAGS_MAINT_APPEND = $(shell $(dpkg_buildflags) --get CPPFLAGS)
 
 %:
-	dh $@ --with python2 --with systemd
+	dh $@ --with python2
 
 override_dh_auto_install:
 	dh_auto_install --destdir=debian/tmp
