--- a/debian/control
+++ b/debian/control
@@ -10,7 +10,7 @@ XSBC-Pexip-Original-Uploaders: Manoj Srivastava <srivasta@debian.org>,
 Standards-Version: 3.9.5
 Build-Depends: debhelper (>= 9),
                dpkg-dev (>= 1.16.0),
-               dh-systemd (>= 1.4),
+#               dh-systemd (>= 1.4),
                file,
                gawk,
                gettext,
