--- a/debian/control
+++ b/debian/control
@@ -32,7 +32,7 @@ Build-Depends: debhelper (>= 9),
                python-sepolgen (>= 1.1.8)
 X-Python-Version: >= 2.5
 Homepage: http://userspace.selinuxproject.org/
-XS-Pexip-Upstream: http://ftp.debian.org/debian/ jessie
+XS-Pexip-Upstream: http://ftp.debian.org/debian/ stretch
 
 Package: policycoreutils
 Architecture: linux-any
